add new config KAFKA_OFFSET

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "ZookeeperUrl": "localhost:2181",
-  "KafkaGroupId": "kafka2mqtt",
   "KafkaTopic": "topic",
+  "KafḱaOffset": "latest",
   "FilterPath": "",
   "FilterValue": "",
   "MqttUser": "keycloak-client",
