remove default values for MqttUser and MqttPw

--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
   "KafkaOffset": "earliest",
   "KafkaGroupId": "kafka2mqtt-01",
   "FilterQuery": ".device_id==\"1234\"",
-  "MqttUser": "keycloak-client",
-  "MqttPw": "keycloak-secret",
+  "MqttUser": "",
+  "MqttPw": "",
   "MqttClientId": "kafka2mqtt",
   "MqttBroker": "localhost:1883",
   "MqttQos": 0,
